plugins {
    id 'java'
    id "com.google.protobuf" version "0.9.1"
    id 'org.springframework.boot' version '2.7.7'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'


repositories {
    mavenCentral()
}

dependencies {
    implementation 'io.vavr:vavr:0.10.4'
    implementation 'org.liquibase:liquibase-core'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'com.google.protobuf:protobuf-java:3.21.12'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'am.ik.yavi:yavi:0.12.0'
    implementation 'io.camunda:spring-zeebe-starter:8.1.14'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.amqp:spring-rabbit-test'
    testImplementation 'org.mockito:mockito-core:2.1.0'
    testImplementation 'org.assertj:assertj-core:3.23.1'
    testImplementation 'com.tngtech.archunit:archunit-junit5:1.0.1'
}

tasks.named('test') {
    useJUnitPlatform()
}
